asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/DisplayNotification__c.field-meta.xml
<CustomField>
    <fullName>DisplayNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When no notification displays, you can just refresh view to see rollback data.</description>
    <label>Display Notification</label>
    <type>Checkbox</type>
</CustomField>