asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Populate concerned record's object API name if you want allow user to navigate to the record's view from the toast notification and/or if you want to refresh record's view and/or object's related lists to see the rollback data.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>