asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Set the concerned record ID to allow the user to navigate to the record&#39;s view page (only if the record name field is also populated). Also required if refreshing record&#39;s view is required (then, do not forget to inform object type field).</description>
    <inlineHelpText>Set the concerned record ID to allow the user to navigate to the record&#39;s view page (only if the record name field is also populated). Also required if refreshing record&#39;s view is required (then, do not forget to inform object type field).</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>