asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <description>Mention of the record as it will display in the toast notification. Use the {0} index placeholder in your message to do so.</description>
    <inlineHelpText>Mention of the record as it will display in the toast notification. Use the {0} index placeholder in your message to do so.</inlineHelpText>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>