asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/ToastNotificationMode__c.field-meta.xml
<CustomField>
    <fullName>ToastNotificationMode__c</fullName>
    <description>Set the toast notification persistency. Valid values are: dismissable (default), pester or sticky.</description>
    <inlineHelpText>Set the toast notification persistency. Valid values are: dismissable (default), pester or sticky.</inlineHelpText>
    <label>Toast Notification Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>