asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/ToastNotificationVariant__c.field-meta.xml
<CustomField>
    <fullName>ToastNotificationVariant__c</fullName>
    <description>Set toast notification variant: Valid values are: info (default), success, warning, and error.</description>
    <inlineHelpText>Set toast notification variant: Valid values are: info (default), success, warning, and error.</inlineHelpText>
    <label>Toast Notification Variant</label>
    <length>8</length>
    <type>Text</type>
</CustomField>