asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotification__e/fields/UsersToNotify__c.field-meta.xml
<CustomField>
    <fullName>UsersToNotify__c</fullName>
    <description>Salesforce IDs of users to notify, use the separator you wish. To notify ALL the users, do not populate this field.</description>
    <inlineHelpText>Salesforce IDs of users to notify, use the separator you wish. To notify ALL the users, do not populate this field.</inlineHelpText>
    <label>User(s) to Notify</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>